# mcpml

./: .gitignore  README.md  idea.yaml  pyproject.toml  requirements.txt  setup.py
examples/: mcpml.yaml
examples/custom_tools/: math.py  search.py  weather.py
examples/schemas/: __init__.py  sentiment.py
mcpml/agent_integrations/: __init__.py  base.py  factory.py  openai.py
mcpml/cli/: __init__.py  config_loader.py  main.py
mcpml/config/: __init__.py  mcpml.py
mcpml/mcp_server/: __init__.py  server.py  tools.py
